31/9/2024
- Futabasaurus Now Moves Entire Neck
- Replaced Nether Coin With Ice Age Coin
- Stone Tablets Are Now Data-Driven
- (Fabric) Fixed Server Crash
- Fixed Placing Stone Tables
- Fixed Cannibalism
- Fixed Bounding Boxes
- Fixed Frozen Meat's Attack Damage
- Added Updated Triceratops Model
- Added "Anu Totem" Stone Tablet
- Added Coat-Types; data-driven cosmetics for dinosaurs
12/9/2024
- (Fabric) Fixed Crash
19/8/2024
- (Neoforge) Updated Neoforge to 21.0.107
- (Neoforge) Fixed Antiquated Code
- (Fabric) Fixed Crash
14/8/2024
- (Neoforge) Updated Neoforge to 21.0.95
- (Fabric) Updated Fabric to 0.100.7+1.21
- Updated JEI to 19.5.0.32
- Updated SimpleLibrary to 3.9.1
6/8/2024
- Entity Textures Moved From "entities" to "entity"
- Dinosaur Textures Moved Out Of "animals"
- Javelin Textures Moved Into "javelin"
- Screens Render Like Vanilla
- Mammoths can now be commanded
- Reorganised Creative Mode Tab As Such: Fossils, DNA (Mesozoic, Cenozoic, Modern), Eggs/Embryo Syringes (Mesozoic, Cenozoic, Modern), Food Stuff (Meat (Mesozoic, Cenozoic, Modern), Nautilus, Food Buckets, Essence), Prehistoric Plants, Archaeology, Misc Drops, Tools (Dinosaurs, Ancient, Scarab, Javelins), Blocks (Ore, Machines, Decoration, Plants), Spawn Eggs
- Spawn Eggs No Longer Exist In Spawn Eggs Tab
- Renamned All Meats To Remove "Meat" Part of Their Name
- Scarab Tools Are Now Fire Resistant
- Internal Translation Keys Now Follow Vanilla Rules
- Internal Class Names More Consistent
- Updated Legacy Textures Pack Name
- Fixed Cooked Dinosaur Meat Recipes
- (NeoForge) Fixed Compostables
- (Fabric) Fixed Animals Breaking Blocks Not Being Toggleable
- (Fabric) Fixed Animals Not Starving Not Being Toggleable
- Fixed Skeletons Not Working
- Fixed Skeletons Consuming Bones In Creative
- Fixed Skeleton's Bounding Box Sizes
- Fixed Anu Charging Texture
- Fixed Incubated Eggs Not Working
- Fixed Frog DNA Having No Recipe
- Fixed Sheep DNA Missing A Recipe
- Fixed Pregnant Animals Crashing