@@ -1,18 +1,28 @@
 package willatendo.fossilslegacy.server.block;
 
+import net.minecraft.core.BlockPos;
 import net.minecraft.core.cauldron.CauldronInteraction;
+import net.minecraft.sounds.SoundEvent;
 import net.minecraft.sounds.SoundEvents;
 import net.minecraft.sounds.SoundSource;
 import net.minecraft.stats.Stats;
+import net.minecraft.world.InteractionHand;
 import net.minecraft.world.ItemInteractionResult;
+import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.ItemUtils;
 import net.minecraft.world.item.Items;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.level.block.LayeredCauldronBlock;
+import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.gameevent.GameEvent;
 import willatendo.fossilslegacy.server.item.FossilsLegacyItems;
 
 import java.util.Map;
+import java.util.function.Predicate;
 
 public class FossilsLegacyCauldronInteraction {
     public static final CauldronInteraction.InteractionMap RAW_CHICKEN_SOUP = CauldronInteraction.newInteractionMap("raw_chicken_soup");
@@ -27,14 +37,15 @@ public class FossilsLegacyCauldronInteraction {
 
     public static void init() {
         Map<Item, CauldronInteraction> rawChickenSoup = RAW_CHICKEN_SOUP.map();
+        rawChickenSoup.put(Items.BUCKET, (blockState, level, blockPos, player, interactionHand, itemStack) -> FossilsLegacyCauldronInteraction.fillBucket(blockState, level, blockPos, player, interactionHand, itemStack, new ItemStack(FossilsLegacyItems.RAW_CHICKEN_SOUP_BUCKET.get()), passBlockState -> passBlockState.getValue(SoupCauldronBlock.LEVEL) == 8, SoundEvents.BUCKET_FILL));
         FossilsLegacyCauldronInteraction.defaultFill(rawChickenSoup);
         Map<Item, CauldronInteraction> cookedChickenSoup = COOKED_CHICKEN_SOUP.map();
         cookedChickenSoup.put(Items.GLASS_BOTTLE, (blockState, level, blockPos, player, interactionHand, itemStack) -> {
             if (!level.isClientSide) {
-                Item $$6 = itemStack.getItem();
+                Item item = itemStack.getItem();
                 player.setItemInHand(interactionHand, ItemUtils.createFilledResult(itemStack, player, new ItemStack(FossilsLegacyItems.CHICKEN_ESSENCE_BOTTLE.get())));
                 player.awardStat(Stats.USE_CAULDRON);
-                player.awardStat(Stats.ITEM_USED.get($$6));
+                player.awardStat(Stats.ITEM_USED.get(item));
                 SoupCauldronBlock.lowerFillLevel(blockState, level, blockPos);
                 level.playSound(null, blockPos, SoundEvents.BOTTLE_FILL, SoundSource.BLOCKS, 1.0F, 1.0F);
                 level.gameEvent(null, GameEvent.FLUID_PICKUP, blockPos);
@@ -42,8 +53,10 @@ public class FossilsLegacyCauldronInteraction {
 
             return ItemInteractionResult.sidedSuccess(level.isClientSide);
         });
+        cookedChickenSoup.put(Items.BUCKET, (blockState, level, blockPos, player, interactionHand, itemStack) -> FossilsLegacyCauldronInteraction.fillBucket(blockState, level, blockPos, player, interactionHand, itemStack, new ItemStack(FossilsLegacyItems.COOKED_CHICKEN_SOUP_BUCKET.get()), passBlockState -> passBlockState.getValue(SoupCauldronBlock.LEVEL) == 8, SoundEvents.BUCKET_FILL));
         FossilsLegacyCauldronInteraction.defaultFill(cookedChickenSoup);
         Map<Item, CauldronInteraction> rawBerryMedley = RAW_BERRY_MEDLEY.map();
+        rawBerryMedley.put(Items.BUCKET, (blockState, level, blockPos, player, interactionHand, itemStack) -> FossilsLegacyCauldronInteraction.fillBucket(blockState, level, blockPos, player, interactionHand, itemStack, new ItemStack(FossilsLegacyItems.RAW_BERRY_MEDLEY_BUCKET.get()), passBlockState -> passBlockState.getValue(SoupCauldronBlock.LEVEL) == 8, SoundEvents.BUCKET_FILL));
         FossilsLegacyCauldronInteraction.defaultFill(rawBerryMedley);
         Map<Item, CauldronInteraction> cookedBerryMedley = COOKED_BERRY_MEDLEY.map();
         cookedBerryMedley.put(Items.GLASS_BOTTLE, (blockState, level, blockPos, player, interactionHand, itemStack) -> {
@@ -59,11 +72,30 @@ public class FossilsLegacyCauldronInteraction {
 
             return ItemInteractionResult.sidedSuccess(level.isClientSide);
         });
+        cookedBerryMedley.put(Items.BUCKET, (blockState, level, blockPos, player, interactionHand, itemStack) -> FossilsLegacyCauldronInteraction.fillBucket(blockState, level, blockPos, player, interactionHand, itemStack, new ItemStack(FossilsLegacyItems.COOKED_BERRY_MEDLEY_BUCKET.get()), passBlockState -> passBlockState.getValue(SoupCauldronBlock.LEVEL) == 8, SoundEvents.BUCKET_FILL));
         FossilsLegacyCauldronInteraction.defaultFill(cookedBerryMedley);
         FossilsLegacyCauldronInteraction.modFill(CauldronInteraction.EMPTY.map());
         FossilsLegacyCauldronInteraction.modFill(CauldronInteraction.WATER.map());
         FossilsLegacyCauldronInteraction.modFill(CauldronInteraction.LAVA.map());
         FossilsLegacyCauldronInteraction.modFill(CauldronInteraction.POWDER_SNOW.map());
+    }
+
+    private static ItemInteractionResult fillBucket(BlockState blockState, Level level, BlockPos blockPos, Player player, InteractionHand interactionHand, ItemStack emptyItemStack, ItemStack filledItemStack, Predicate<BlockState> blockStatePredicate, SoundEvent fillSound) {
+        if (!blockStatePredicate.test(blockState)) {
+            return ItemInteractionResult.PASS_TO_DEFAULT_BLOCK_INTERACTION;
+        } else {
+            if (!level.isClientSide) {
+                Item item = emptyItemStack.getItem();
+                player.setItemInHand(interactionHand, ItemUtils.createFilledResult(emptyItemStack, player, filledItemStack));
+                player.awardStat(Stats.USE_CAULDRON);
+                player.awardStat(Stats.ITEM_USED.get(item));
+                level.setBlockAndUpdate(blockPos, Blocks.CAULDRON.defaultBlockState());
+                level.playSound(null, blockPos, fillSound, SoundSource.BLOCKS, 1.0F, 1.0F);
+                level.gameEvent(null, GameEvent.FLUID_PICKUP, blockPos);
+            }
+
+            return ItemInteractionResult.sidedSuccess(level.isClientSide);
+        }
     }
 
     private static void modFill(Map<Item, CauldronInteraction> map) {
